# coding-adventures

./: .build-cache.json  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  generate_all.py  hello_world.f90  index.html  lessons.md  mise.toml  out.txt
.claude/: settings.local.json
code/programs/haskell/build-tool/: README.md  cabal.project  coding-adventures-build-tool.cabal
code/programs/haskell/build-tool/app/: Main.hs
code/programs/haskell/build-tool/src/: BuildTool.hs
code/programs/haskell/build-tool/test/: BuildToolSpec.hs  Spec.hs
code/programs/haskell/scaffold-generator/: CHANGELOG.md  README.md  coding-adventures-scaffold-generator.cabal
code/programs/haskell/scaffold-generator/app/: Main.hs
code/programs/haskell/scaffold-generator/src/: ScaffoldGenerator.hs
code/programs/haskell/scaffold-generator/test/: ScaffoldGeneratorSpec.hs  Spec.hs
code/programs/python/build-tool/: BUILD  BUILD_windows  CHANGELOG.md  README.md  pyproject.toml
code/programs/python/build-tool/tests/: test_cache.py  test_ci_workflow.py  test_cli.py  test_cli_new_features.py  test_discovery.py  test_executor.py  test_gitdiff.py  test_glob_match.py  test_hasher.py  test_new_resolver_features.py  test_plan.py  test_reporter.py  test_resolver.py  test_starlark_evaluator.py  test_validator.py
code/programs/python/celsius-to-fahrenheit-predictor/: main.py  pyproject.toml
code/programs/python/conduit-hello/: BUILD  CHANGELOG.md  README.md  hello.py  pyproject.toml
code/programs/python/conduit-hello/tests/: test_conduit_hello.py
code/programs/python/grammar-tools/: BUILD  BUILD_windows  CHANGELOG.md  README.md  main.py  pyproject.toml
code/programs/python/grammar-tools/tests/: test_cli.py
code/programs/python/house-price-predictor/: main.py  pyproject.toml
code/programs/python/ircd/: BUILD  BUILD_windows  CHANGELOG.md  README.md  pyproject.toml  required_capabilities.json
code/programs/python/ircd/tests/: test_ircd.py
code/programs/python/macsyma-repl/: BUILD  BUILD_windows  CHANGELOG.md  README.md  __main__.py  language.py  main.py  prompt.py  pyproject.toml
code/programs/python/macsyma-repl/tests/: test_session.py
code/programs/python/mansion-classifier/: main.py  pyproject.toml
code/programs/python/parrot/: BUILD  BUILD_windows  CHANGELOG.md  README.md  pyproject.toml
code/programs/python/parrot/tests/: test_parrot.py
code/programs/python/pipeline-visualizer/: BUILD  BUILD_windows  CHANGELOG.md  README.md  devbox.json  generate_report.py  pyproject.toml
code/programs/python/pwd/: BUILD  CHANGELOG.md  README.md  pyproject.toml
code/programs/python/scaffold-generator/: BUILD  BUILD_windows  CHANGELOG.md  README.md  pyproject.toml  scaffold_generator.py
code/programs/python/scaffold-generator/tests/: test_scaffold_generator.py
code/programs/python/space-launch-predictor/: main.py  pyproject.toml
code/programs/python/stack-visualizer/: README.md  devbox.json  pyproject.toml  stack_visualizer.py
code/programs/python/unix-tools/: BUILD  BUILD_windows  CHANGELOG.md  README.md  basename.json  basename_tool.py  cat.json  cat_tool.py  chmod_tool.py  chown_tool.py  cmp_tool.py  comm_tool.py  cp_tool.py  cut_tool.py  df_tool.py  diff_tool.py  dirname.json  dirname_tool.py  du_tool.py  echo.json  echo_tool.py  env_tool.py  expand.json  expand_tool.py  false.json  false_tool.py  fold.json  fold_tool.py  grep_tool.py  groups_tool.py  head.json  head_tool.py  id_tool.py  join_tool.py  ln.json  ln_tool.py  logname_tool.py  ls_tool.py  md5sum.json  md5sum_tool.py  (+44 more)
code/programs/python/unix-tools/tests/: test_basename.py  test_cat.py  test_chmod.py  test_chown.py  test_cmp.py  test_comm.py  test_cp.py  test_cut.py  test_df.py  test_diff.py  test_dirname.py  test_du.py  test_echo.py  test_env.py  test_expand.py  test_false.py  test_fold.py  test_grep.py  test_groups.py  test_head.py  test_id.py  test_join.py  test_ln.py  test_logname.py  test_ls.py  test_md5sum.py  test_mkdir.py  test_mv.py  test_nl.py  test_nproc.py  test_paste.py  test_printenv.py  test_pwd.py  test_realpath.py  test_rev.py  test_rm.py  test_rmdir.py  test_seq.py  test_sha256sum.py  test_sleep.py  (+16 more)
code/programs/python/xor-classifier/: pyproject.toml
code/programs/python/xor-hidden-layer-demo/: BUILD  main.py  pyproject.toml
code/programs/rust/build-tool/: BUILD  BUILD_windows  CHANGELOG.md  Cargo.toml  README.md
code/programs/rust/build-tool/src/: cache.rs  ci_workflow.rs  discovery.rs  executor.rs  gitdiff.rs  glob_match.rs  graph.rs  hasher.rs  main.rs  plan.rs  reporter.rs  resolver.rs  starlark_evaluator.rs  validator.rs
code/programs/rust/celsius-to-fahrenheit-predictor/: Cargo.toml
code/programs/rust/celsius-to-fahrenheit-predictor/src/: main.rs
code/programs/rust/cowsay/: Cargo.toml
code/programs/rust/cowsay/src/: main.rs
code/programs/rust/grammar-tools/: CHANGELOG.md  Cargo.toml  README.md
code/programs/rust/grammar-tools/src/: lib.rs  main.rs
code/programs/rust/instagram-filters/: BUILD  CHANGELOG.md  Cargo.toml  README.md  required_capabilities.json
code/programs/rust/instagram-filters/src/: lib.rs  main.rs
code/programs/rust/ircd/: BUILD  BUILD_windows  CHANGELOG.md  Cargo.toml  README.md
code/programs/rust/ircd/src/: main.rs
code/programs/rust/mansion-classifier/: Cargo.toml
code/programs/rust/mansion-classifier/src/: main.rs
code/programs/rust/markdown-reader/: BUILD  CHANGELOG.md  Cargo.toml  README.md  required_capabilities.json
code/programs/rust/markdown-reader/src/: main.rs
code/programs/rust/mini-redis/: BUILD  CHANGELOG.md  Cargo.toml  README.md
code/programs/rust/mini-redis/src/: lib.rs  main.rs  resp_adapter.rs
code/programs/rust/parrot/: BUILD  CHANGELOG.md  Cargo.toml  README.md
code/programs/rust/parrot/src/: lib.rs  main.rs  prompt.rs
code/programs/rust/parrot/tests/: parrot_test.rs
code/programs/rust/scaffold-generator/: BUILD  BUILD_windows  CHANGELOG.md  Cargo.toml  README.md
code/programs/rust/scaffold-generator/src/: lib.rs  main.rs
code/programs/rust/scaffold-generator/tests/: integration_test.rs
(+3341 files in other folders)
