cabal-version: 3.0
name:          coding-adventures-build-tool
version:       0.1.0
synopsis:      Haskell implementation of the monorepo build tool
license:       MIT
author:        Adhithya Rajasekaran
maintainer:    Adhithya Rajasekaran
build-type:    Simple

library
    exposed-modules:  BuildTool
    build-depends:    base >=4.14
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite coding-adventures-build-tool-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    base >=4.14
                    , coding-adventures-build-tool
    hs-source-dirs:   test
    default-language: Haskell2010
