[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-adventures-build-tool"
version = "0.1.0"
description = "Incremental, parallel monorepo build tool with hash-based caching"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Adhithya Rajasekaran" }]
readme = "README.md"
keywords = ["build-tool", "monorepo", "incremental-build", "parallel-build"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = ["coding-adventures-progress-bar"]

[project.scripts]
build-tool = "build_tool.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/build_tool"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # bugbear (common bugs)
    "SIM",  # simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=build_tool --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/build_tool"]

[tool.coverage.report]
fail_under = 80
show_missing = true
