[project]
name = "coding-adventures-grammar-tools-program"
version = "1.0.0"
description = "CLI program for validating .tokens and .grammar files"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Adhithya Rajasekaran" }]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["main"]
