[project]
name = "house-price-predictor"
version = "0.1.0"
description = "Multi-Variable Linear Regression for Real Estate"
requires-python = ">=3.9"
dependencies = [
    "coding-adventures-loss-functions",
    "coding-adventures-matrix"
]

[tool.uv.sources]
coding-adventures-loss-functions = { path = "../../../packages/python/loss-functions" }
coding-adventures-matrix = { path = "../../../packages/python/matrix" }
