[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-adventures-ircd"
version = "0.1.0"
description = "IRC server program — wires all packages together"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Adhithya Rajasekaran" }]
readme = "README.md"
dependencies = [
    "coding-adventures-irc-proto",
    "coding-adventures-irc-framing",
    "coding-adventures-irc-server",
    "coding-adventures-irc-net-selectors",
]

[project.scripts]
ircd = "ircd:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/ircd"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ircd --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/ircd"]

[tool.coverage.report]
fail_under = 80
show_missing = true
