[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-adventures-macsyma-repl-program"
version = "0.2.0"
description = "Interactive MACSYMA-flavored REPL on top of the symbolic VM."
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Adhithya Rajasekaran" }]
dependencies = [
    "coding-adventures-cas-pretty-printer",
    "coding-adventures-macsyma-compiler",
    "coding-adventures-macsyma-lexer",
    "coding-adventures-macsyma-parser",
    "coding-adventures-macsyma-runtime",
    "coding-adventures-repl",
    "coding-adventures-symbolic-ir",
    "coding-adventures-symbolic-vm",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.setuptools]
py-modules = ["language", "prompt", "main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["language", "prompt", "main"]

[tool.coverage.report]
fail_under = 80
show_missing = true
