[project]
name = "pipeline-visualizer"
description = "Runs the computing stack pipeline and generates a static HTML visualization report"
requires-python = ">=3.12"
dependencies = [
    "coding-adventures-pipeline",
    "coding-adventures-html-renderer",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]
