[project]
name = "coding-adventures-pwd"
version = "1.0.0"
description = "pwd — print the current working directory, powered by CLI Builder"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
