[project]
name = "coding-adventures-scaffold-generator"
version = "1.0.0"
description = "Generate CI-ready package scaffolding for the coding-adventures monorepo"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
