[project]
name = "space-launch-predictor"
version = "0.1.0"
description = "Binary Classifier for Space Launches using Perceptron"
requires-python = ">=3.12"
dependencies = [
    "coding-adventures-matrix", "coding-adventures-loss-functions", "activation-functions", "perceptron"
]

[tool.uv.sources]
coding-adventures-matrix = { path = "../../../packages/python/matrix", editable = true }
coding-adventures-loss-functions = { path = "../../../packages/python/loss-functions", editable = true }
activation-functions = { path = "../../../packages/python/activation-functions", editable = true }
perceptron = { path = "../../../packages/python/perceptron", editable = true }
