[project]
name = "stack-visualizer"
version = "0.1.0"
description = "Terminal UI that visually walks through every stage of the computing stack"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50",
    "coding-adventures-pipeline",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]
