[project]
name = "coding-adventures-unix-tools"
version = "1.0.0"
description = "Unix tools reimplemented using CLI Builder"
requires-python = ">=3.12"

[tool.setuptools]
py-modules = ["pwd_tool", "true_tool", "false_tool", "echo_tool", "cat_tool", "wc_tool"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
