[package]
name = "cowsay"
version = "0.1.0"
edition = "2021"

[dependencies]
cli-builder = { path = "../../../packages/rust/cli-builder" }
serde_json = "1.0"
regex = "1.10"
atty = "0.2"
layout-ir = { path = "../../../packages/rust/layout-ir" }
layout-text-measure-native = { path = "../../../packages/rust/layout-text-measure-native" }
layout-to-paint = { path = "../../../packages/rust/layout-to-paint" }
paint-codec-png = { path = "../../../packages/rust/paint-codec-png" }
paint-metal = { path = "../../../packages/rust/paint-metal" }
text-native = { path = "../../../packages/rust/text-native" }
