[package]
name = "grammar-tools"
version = "1.0.0"
edition = "2021"
description = "CLI for validating .tokens and .grammar files — Rust port using cli-builder"
authors = ["Adhithya Rajasekaran"]
license = "MIT"

# [workspace] is required so Cargo does not try to pull this binary into the
# root workspace (there is no root Cargo.toml in this monorepo).
[workspace]

[lib]
name = "grammar_tools_cli"
path = "src/lib.rs"

[[bin]]
name = "grammar-tools"
path = "src/main.rs"

[dependencies]
cli-builder  = { path = "../../../packages/rust/cli-builder" }
grammar-tools = { path = "../../../packages/rust/grammar-tools" }
serde_json   = "1.0"

[dev-dependencies]
# No extra dev deps — tests use only std + the lib above.
