[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"
description = "Mini Redis TCP server"

[dependencies]
in-memory-data-store = { path = "../../../packages/rust/in-memory-data-store" }
tcp-server = { path = "../../../packages/rust/tcp-server" }
resp-protocol = { path = "../../../packages/rust/resp-protocol" }
